<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Courseline</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Manage coursework better!</string>
    <string name="email_address">Email Address</string>
    <string name="pwd">Password</string>
    <string name="logo_desc">This is our logo</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="re_pwd">Re-type Password</string>
    <string name="g_year">Graduation year</string>
    <string name="d_code">Department code</string>
    <string name="u_pic">Upload pic</string>
    <string name="c_code">Course code</string>
    <string name="search">Search</string>
    <string name="add_c">Add Course</string>
    <string name="delete_c">Delete Course</string>
    <string name="add_note">Add Notes</string>
    <string name="title_activity_addition">AdditionActivity</string>
    <string name="title_activity_deletion">DeletionActivity</string>
    <string name="title_activity_home">Dashboard</string>
    <string name="title_activity_subject">SubjectActivity</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="delete_head"></string>
    <string name="notReg">Not Registered? Please Sign Up.</string>
    <string name="search_hint">Enter Course Number</string>
    <string name="desc">Search button</string>
    <string name="sub_head"></string>
    <string name="notes_head"></string>
    <string name="edit_notes">Edit Notes</string>
    <string name="img">Note</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="delete_button">Delete Image</string>
    <string name="addNotes">Manage Notes</string>
    <string name="addPics">Manage Pictures</string>
    <string name="updateNote">Update Note</string>
    <string name="addImg">Add Image</string>

</resources>
