<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeletionActivity" >
    
      <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/courseline_logo" />

      <TextView
          android:id="@+id/delete_Text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/imageView1"
          android:layout_below="@+id/imageView1"
          android:layout_marginTop="40dp"
          android:text="@string/delete_head"
          android:textAppearance="?android:attr/textAppearanceMedium" />
      
      
      
      

      <Button
          android:id="@+id/button1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/delete_Text"
          android:layout_alignParentBottom="true"
          android:layout_alignRight="@+id/imageView1"
          android:layout_marginBottom="18dp"
          android:text="@string/delete_c" />

</RelativeLayout>
